# persona_ai_app

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  langchain_helper.py  main.py  pyproject.toml
frontend/: Dockerfile  app.py  pyproject.toml
