[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yan Lesnevskiy <ylesnevski@valtech.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.49"
langchain-openai = "^0.3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
