[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Yan Lesnevski <ylesnevski@valtech.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
